force-app/main/default/objects/Lead/fields/Capacity_to_Give_Over_5yrs__c.field-meta.xml
<CustomField>
    <fullName>Capacity_to_Give_Over_5yrs__c</fullName>
    <label>Capacity to Give Over 5yrs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Capacity_to_Give_Over_5yrs</valueSetName>
    </valueSet>
</CustomField>