force-app/main/default/objects/Lead/fields/case_safe_id__c.field-meta.xml
<CustomField>
    <fullName>case_safe_id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>case safe id</label>
    <type>Text</type>
</CustomField>