force-app/main/default/objects/Lead/fields/Corporate_Income_Stream__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Income_Stream__c</fullName>
    <label>Corporate Income Stream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Corporate_Income_Stream</valueSetName>
    </valueSet>
</CustomField>