force-app/main/default/objects/Lead/fields/HH_Outreach_del__c.field-meta.xml
<CustomField>
    <fullName>HH_Outreach_del__c</fullName>
    <label>HH Outreach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not a Priority</fullName>
            </value>
            <value>
                <fullName>To Be Emailed</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>