force-app/main/default/objects/Lead/fields/Known_Philanthropy__c.field-meta.xml
<CustomField>
    <fullName>Known_Philanthropy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Known Philanthropy</label>
    <type>Checkbox</type>
</CustomField>