force-app/main/default/objects/Lead/fields/Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Likelihood__c</fullName>
    <label>Likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>30%</fullName>
            </value>
            <value>
                <fullName>40%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>60%</fullName>
            </value>
            <value>
                <fullName>70%</fullName>
            </value>
            <value>
                <fullName>80%</fullName>
            </value>
            <value>
                <fullName>90%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
                <isActive>false</isActive>
                <label>100%</label>
            </value>
            <value>
                <fullName>25%</fullName>
                <isActive>false</isActive>
                <label>25%</label>
            </value>
            <value>
                <fullName>75%</fullName>
                <isActive>false</isActive>
                <label>75%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>