force-app/main/default/objects/Lead/fields/Potential_Ask_Value__c.field-meta.xml
<CustomField>
    <fullName>Potential_Ask_Value__c</fullName>
    <description>Created by Solution Junkies 04/06/2025 - T2310-2195
Potential value used for Lead Allocation</description>
    <label>Potential Ask Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>