force-app/main/default/objects/Lead/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Created by Solution Junkies 04/06/2025 - T2310-2195
Used in Lead prioritisation and allocation</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Priority</valueSetName>
    </valueSet>
</CustomField>