force-app/main/default/objects/Lead/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <description>Must be populated if lead status is set to unqualified</description>
    <label>Unqualified Reason</label>
    <type>TextArea</type>
</CustomField>