force-app/main/default/objects/Lead/fields/Unqualified_Reason_sj__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason_sj__c</fullName>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Form of support not relevant</fullName>
            </value>
            <value>
                <fullName>Geographical area not relevant</fullName>
            </value>
            <value>
                <fullName>Objectives not relevant</fullName>
            </value>
            <value>
                <fullName>Conflict with gift acceptance policy</fullName>
            </value>
            <value>
                <fullName>No unsolicited applications</fullName>
            </value>
            <value>
                <fullName>Winding up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>