force-app/main/default/objects/Lead/recordTypes/Major_Donor.recordType-meta.xml
<RecordType>
    <fullName>Major_Donor</fullName>
    <active>true</active>
    <businessProcess>FS Lead Process</businessProcess>
    <label>Major Donor</label>
</RecordType>