force-app/main/default/objects/Lead/validationRules/Unqualified_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Unqualified_Reason</fullName>
    <active>true</active>
    <description>Unqualified reason must not be blank if status is set to unqualified</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Unqualified&quot;),
    ISPICKVAL(Unqualified_Reason_sj__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Please enter an unqualified reason</errorMessage>
</ValidationRule>