force-app/main/default/objects/Lead/listViews/Major_Donor_Leads.listView-meta.xml
<ListView>
    <fullName>Major_Donor_Leads</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Capacity_to_Give_Over_5yrs__c</columns>
    <columns>Wealth_Band__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Allen</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Sachel</value>
    </filters>
    <label>Major Donor Leads</label>
</ListView>