force-app/main/default/objects/Lead/listViews/T_G_Leads.listView-meta.xml
<ListView>
    <fullName>T_G_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Brand,Howells,Norris,Beardmore,Yavas,Lashwood</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Identify,Researched,Qualified</value>
    </filters>
    <label>T&amp;G Leads</label>
</ListView>